# TimeSheet

./: .gitignore  Launch Timesheet.bat  main.js  package-lock.json  package.json  preload.js
.github/workflows/: ci.yml  installer.yml  release.yml
src/: index.html  reminder.html  ts.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
